# openpubkey

./: .changie.yml  .gitattributes  .gitignore  .golangci.bck.yml  .golangci.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum  main.go
.github/: release-drafter-config.yml
ajwks/: ajwks.go
ca/: ca.go  ca_test.go
cert/: ca.go  ca_test.go  cert.go  cert_test.go
client/: claims.go  client.go  cos.go  cos_test.go  mfacosigner.go  oidc.go  opkclient_test.go
commands/: add.go  login.go  verify.go
cosigner/: authcosigner.go  authcosigner_test.go  authidissuer.go  authidissuer_test.go  authstate.go  authstate_test.go  authstatestore.go  authstatestores.go  basiccosigner.go  basiccosigner_test.go  cosigner.go  cosigner_test.go  cosignerverifier.go  cosignerverifier_test.go  simplecosigner.go
demo/: main.go
discover/: cache.go  discover.go  discover_test.go  mock_jwks.go  mocks.go
docs/: FAQ.md  idtokens.md  jwks.md  opkssh.md  pktoken.md
errors/: errors.go
examples/sui/historical-jwks-zklogin/: Cargo.toml  oppubkeys100.json  oppubkeys5.json  reader.go  reader_test.go
examples/sui/historical-jwks-zklogin/src/: main.rs
gq/: benchmark_test.go  bigutil.go  gq.go  gq_iso_test.go  gq_test.go  headers.go  prove.go  pss.go  pss_test.go  randutil.go  rsa.go  sign.go  verify.go
idp/: fakeidp.go  fakeidp_test.go  jwks.go
internal/: providers.go
jose/: keyalgorithm.go
jwsig/: jws.go  jws_test.go  jwt.go  jwt_test.go  oidc.go  sig.go  tokens.go
keys/: keyalgorithm.go
oidc/: dpop.go  dpop_test.go  jws.go  jws_test.go  jwt.go  (+6 more)
(+318 files in other folders)
